--- a/requirements.txt
+++ b/requirements.txt
@@ -51,7 +51,6 @@ nest-asyncio==1.5.1
 notebook==6.4.4
 numpy==1.21.2
 openai==0.10.4
-openpyxl==3.0.8
 packaging==21.0
 pandas==1.3.3
 pandas-stubs==1.2.0.17
@@ -60,6 +59,7 @@ parso==0.8.2
 pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==8.3.1
+progress==1.6
 prometheus-client==0.11.0
 prompt-toolkit==3.0.20
 psycopg2-binary==2.9.1
